Fixed bug #24977 (Revert mysql_select_db optimization)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@136999 c90b9560-bf6c-de11-be94-00142212c4b1